2nd push of portfolio project

--- a/style.css
+++ b/style.css
@@ -117,4 +117,65 @@ height: 100%;
 background:var(--main-color) ;
 border: .2rem solid var(--main-color);
 border-radius: .8rem;
+font-size: 1.8rem;
+font-weight: 600;
+letter-spacing: .1rem;
+color: var(--bg-color);
+z-index: 1;
+overflow: hidden;
+
+}
+.btn-box .btn::before
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background:linear-gradient(90deg, #001f4d 0%, #87ceeb 100%);
+    z-index: -1;
+    transition: 0.5s;
+}
+.btn-box .btn:hover::before{
+    width: 100%;
+}
+.home-sci
+{
+    position: absolute;
+    bottom: 2rem;
+    width: 238px;
+    display: flex;
+    justify-content: space-between;
+
+}
+.home-sci a{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 20px;
+    color:var(--main-color);
+    z-index: 1;
+    overflow: hidden;
+}
+.home-sci a::before
+{
+    content: '';
+    position:absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: linear-gradient(90deg, #001f4d 0%, #87ceeb 100%);
+    z-index: -1;
+    transition: 0.5s;
+}
+.home-sci a:hover::before{
+width: 100%;
 }
