--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ section
     display: flex;
     align-items: center;
     padding: 0 9%;
+    /* background: url('zenitsu_bg.png') no-repeat; */
+    /* let's keep the bg image for later  */
+    background-size: cover;
+    background-position: center;
 }
 .home-content
 {
@@ -178,4 +182,89 @@ overflow: hidden;
 }
 .home-sci a:hover::before{
 width: 100%;
+}
+
+/* .home-imgHover{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45%;
+    height: 100%;
+    background: transparent;
+    transition: 3s;
+} */
+/* 
+.home-imgHover:hover
+{
+    background: var(--bg-color);
+    opacity: 0.8;
+} */
+ .about
+ {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    background:var(--second-bg-color);
+    padding-bottom: 6rem;
+ }
+ .heading
+ {
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+ }
+ span{
+    color: var(--main-color);
+ }
+ .about-img
+ {
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+ }
+ .about-img img
+{
+ width: 90%;
+ border-radius: 50%;
+}
+.about-img .circle-spin
+{
+position:absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%) rotate(0);
+width: 100%;
+height: 100%;
+border-radius: 50%;
+border-top: .2rem solid var(--second-bg-color);
+border-bottom: .2rem solid var(--second-bg-color);
+border-left: .2rem solid var(--main-color);
+border-right: .2rem solid var(--main-color);
+}
+.about-content
+{
+ text-align:center;   
+}
+.about-content h3{
+    font-size: 2.6rem;
+}
+.about-content p{
+    font-size: 1.6rem;
+    margin:2rem 0 3rem;
+}
+.btn-box.btns
+{
+    display: inline-block;
+    width: 15rem;
+}
+.btn-box.btns a::before
+{
+    background: var(--second-bg-color);
 }
