--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@
 }
 html
 {
-   
-    overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
 body{
     background: var(--bg-color);
     color: var(--text-color);
+    /* overflow: scroll; */
 }
 .header
 {
@@ -206,7 +207,7 @@ width: 100%;
     align-items: center;
     flex-direction: column;
     gap: 2rem;
-    background:var(--second-bg-color);
+    background:var(--bg-color);
     padding-bottom: 6rem;
  }
  .heading
@@ -232,7 +233,7 @@ width: 100%;
  .about-img img
 {
  width: 90%;
- border-radius: 50%;
+ border-radius: 18%;
 }
 .about-img .circle-spin
 {
@@ -267,4 +268,48 @@ border-right: .2rem solid var(--main-color);
 .btn-box.btns a::before
 {
     background: var(--second-bg-color);
+}
+
+.education
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: auto;
+    padding-bottom: 5rem ;
+}
+.education .education-row
+{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+
+}
+.education-row .education-column
+{
+    flex: 1 1 40rem;
+
+}
+.education-column .title
+{
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem 2rem;
+}
+.education-column .education-box
+{
+    border-left: .2rem solid var(--main-color);
+}
+.education-box .education-content
+{
+    position:relative;
+    padding-left: 2rem;
+}
+.education-content .content
+{
+    position: relative;
+    padding: 1.5rem;
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    margin-bottom: 2rem;
 }
