--- a/style.css
+++ b/style.css
@@ -89,6 +89,12 @@ section
     font-weight: 700;
     line-height: 1.3;
 }
+
+.home-content h1 span 
+{
+ color: var(--text-color);   
+}
+
 .home-content .text-animate
 {
     position:relative;
@@ -391,7 +397,26 @@ margin: 0 0 1.5rem;
     border: .2rem solid var(--main-color);
     border-radius: .6rem;
     padding: .5rem 1.5rem;
+    z-index: 1;
+    overflow: hidden;
 }
+.skills-box .skills-content::before
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background:var(--bg-color);
+    z-index: -1;
+    transition: 0.5s;
+}
+.skills-box .skills-content:hover::before
+{
+width: 100%;
+}
+
 .skills-content .progress
 {
     padding: 1rem 0 ;
@@ -449,3 +474,134 @@ margin: 0 0 1.5rem;
 {
     width: 0%;
 }
+
+.contact
+{
+    min-height: auto ;
+    padding-bottom: 7rem;
+}
+.contact form{
+    max-width: 70rem;
+    margin: 0 auto;
+    text-align: center;
+}
+.contact form .input-box
+{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box .input-field
+{
+    position: relative;
+    width: 49%;
+    margin: .8rem 0;
+
+}
+.contact form .input-box .input-field input,
+.contact form .textarea-field textarea
+{
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: transparent;
+    border-radius: .6rem;
+    border: .2rem solid var(--main-color);
+}
+.contact form .input-box .input-field input::placeholder,
+.contact form .textarea-field textarea::placeholder
+{
+color: var(--text-color);
+}
+
+.contact form .focus
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--second-bg-color);
+    border-radius: .6rem;
+    z-index: -1;
+    transition: .5s;
+}
+
+.contact form .input-box .input-field input:focus~.focus,
+.contact form .input-box .input-field input:valid~.focus,
+.contact form .textarea-field textarea:focus~.focus,
+.contact form .textarea-field textarea:valid~.focus
+{
+width: 100%;
+}
+
+.contact form .textarea-field
+{
+    position: relative;
+    margin: .8rem 0 2.7rem;
+    display: flex;
+}
+.contact form .textarea-field textarea
+{
+    resize:none;
+}
+.contact form .btn-box.btns .btn{
+    cursor: pointer;
+}
+.footer
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--second-bg-color);
+}
+.footer-text p{
+    font-size: 1.6rem;
+}
+.footer-iconTop a 
+{
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--main-color);
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    z-index: 1;
+    overflow: hidden;
+}
+.footer-iconTop a::before
+{
+    content: '';
+    top: 0;
+    left: 0;
+    width: 0;
+   height: 100%;
+    background: var(--bg-color);
+    z-index: -1 ;
+    transition: .5s;
+
+}
+.footer-iconTop a:hover::before{
+    width: 100%;
+}
+
+
+.footer-iconTop a i{
+    font-size: 2.4rem;
+    color: var(--bg-color);
+    transition: .5s;
+
+}
+.footer-iconTop a:hover i 
+{
+    color: var(--main-color);
+}
+
