--- a/style.css
+++ b/style.css
@@ -37,7 +37,14 @@ body{
    justify-content: space-between;
    align-items: center;
    z-index: 100;
+   transition: .3s;
 }
+
+.header.sticky
+{
+background: var(--bg-color);
+}
+
 .logo
 {
     font-size: 2.5rem;
@@ -605,3 +612,4 @@ width: 100%;
     color: var(--main-color);
 }
 
+/* BREAKPOINTS */
