--- a/style.css
+++ b/style.css
@@ -613,3 +613,55 @@ width: 100%;
 }
 
 /* BREAKPOINTS */
+@media (max-width: 1200px){
+    html{
+        font-size: 55%;
+    }
+}
+@media (max-width: 991px)
+{
+    .header{
+        padding: 2rem 4%;
+    }
+    section{
+       padding: 10rem 4% 2rem;
+    }
+    .home{
+        padding: 0 4%;
+    }
+    .footer
+    {
+        padding: 2rem 4%;
+    }
+}
+@media (max-width: 768px)
+{
+    .header{
+        background: var(--bg-color);
+    }
+    #menu-icon{
+        display: block;
+    }
+    .navbar{
+        position: absolute;
+        top: 100%;
+        left: -100%;
+        width: 100%;
+        padding: 1rem 4%;
+        background: var(--bg-color);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+        transition: .2s ease;
+        transition-delay: .1s;
+    }
+    .navbar.active 
+    {
+    left: 0;
+    transition-delay: 0s;
+    }
+    .navbar a 
+    {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+    }
+}
