--- a/style.css
+++ b/style.css
@@ -105,14 +105,39 @@ section
 .home-content .text-animate
 {
     position:relative;
-    width: 32.8rem;
+     display: inline-block;
+    /* width: 32.8rem; */
 }
 .home-content .text-animate h3{
     font-size: 3.2rem;
-    font-weight: bolder;
+    font-weight: 700;
     color: transparent; 
-    -webkit-text-stroke: 1.7px var(--main-color); 
+    -webkit-text-stroke: .7px var(--main-color); 
+    background-image: linear-gradient( var(--main-color) , var(--main-color)  );
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-position: -33rem 0 ;
+    animation: homeBgText 6s linear infinite;
+    animation-delay: 2s;
+
 }
+.home-content .text-animate h3::before
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-right: 2px solid var(--main-color);
+    z-index: -1;
+    animation: homeCursorText 6s linear infinite;
+    animation-delay: 2s;
+
+}
+
+
+
 .home-content p{
     font-size: 1.6rem;
     margin: 2rem 0 4rem;
@@ -651,6 +676,7 @@ width: 100%;
         background: var(--bg-color);
         box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
         transition: .2s ease;
+        z-index: 1;
         transition-delay: .1s;
     }
     .navbar.active 
@@ -658,10 +684,126 @@ width: 100%;
     left: 0;
     transition-delay: 0s;
     }
+    .navbar .active-nav{
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0,0,0,.2);
+        z-index: -1;
+        transition: .25s ease ;
+        transition-delay: 0s;
+    }
+    .navbar.active .active-nav{
+        left: 0;
+        transition-delay: .25s;
+    }
     .navbar a 
     {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
+        transform: translateX(-20rem);
+        transition: .25s ease;
+        transition-delay: 0s;
+    }
+    .navbar.active a{
+        transform: translateX(0);
+        transition-delay: .25s;
+           
     }
 }
+
+@media (max-width:520px)
+{
+    html{
+        font-size: 50%;
+   }
+   .home-content h1
+   {
+    display: flex;
+    flex-direction: column;
+   }
+   .home-sci a 
+   {
+    width: 38px;
+    height: 38px;
+   }
+}
+@media (max-width: 462px)
+{
+    .home-content h1
+    {
+        font-size: 5.2rem;
+    }
+   .education
+   {
+    padding: 10rem 4% 5rem;
+   }
+   .contact form .input-box .input-field{
+    width: 100%;
+   }
+   .footer
+   {
+    flex-direction: column-reverse;
+   }
+   .footer p{
+    margin-top: 2rem;
+    text-align: center;
+   }
+}
+@media (max-width: 371px)
+{
+    .home{
+        justify-content: center;
+    }
+    .home-content
+    {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .home-content h1{
+        font-size: 5rem;
+    }
+}
+/* KEYFRAMES ANIMATION */
+@keyframes homeBgText
+{
+   0%,10%,100%
+   {
+    background-position: -33rem 0 ;
+   }
+   65%,
+   85%
+   {
+    background-position: 0 0 ;
+   }
+}
+
+@keyframes homeCursorText
+{
+   0%,
+   10%
+   ,100%
+   {
+   width: 0;
+   }
+   
+   65%,
+   78%,
+   85%{
+    width: 100%;
+    opacity: 1;
+   }
+   
+   75%,
+   81%
+   {
+    opacity: 0;
+   }
+}
+
