--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:wght@300;400;500;600;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:wght@300;400;500;600;700&display=swap');
+       
         
         * {
             margin: 0;
@@ -186,9 +187,11 @@
         .home-sci {
             position: absolute;
             bottom: 4rem;
+            left: 9%;
             width: 170px;
             display: flex;
             justify-content: space-between;
+            z-index: 99;
         }
         
         .home-sci a {
@@ -522,11 +525,11 @@
         }
         
         .skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span {
-            width: 40%;
+            width: 0%;
         }
         
         .skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
-            width: 50%;
+            width: 0%;
         }
         
         /* Contact Section */
@@ -734,6 +737,10 @@
                 padding: 0 4%;
             }
             
+            .home-sci {
+                left: 4%;
+            }
+            
             .footer {
                 padding: 2rem 4%;
             }
@@ -797,6 +804,12 @@
                 transform: translateX(0);
                 transition-delay: .25s;
             }
+            
+            .home-sci {
+                left: 50%;
+                transform: translateX(-50%);
+                bottom: 2rem;
+            }
         }
         
         @media (max-width: 520px) {
@@ -856,5 +869,11 @@
             
             .home-content h1 {
                 font-size: 5rem;
+            }
+            
+            .home-sci {
+                position: static;
+                margin-top: 2rem;
+                transform: none;
             }
         }
